--- a/src/global.scss
+++ b/src/global.scss
@@ -10,6 +10,10 @@ body {
   font-family: "Oleo Script", cursive !important;
   color: $base-text-color;
   background-color: $base-background-color !important;
+  max-width: 100vw;
+  margin-left: auto;
+  margin-right: auto;
+  overflow-x: hidden;
   /* max-width: 1440px;
   margin-left: auto;
   margin-right: auto; */
